<resources>
    <string name="app_name">Gridcoin Remote</string>
    <string name="howToEnableRpc"><u>How to enable RPC?</u></string>
    <string-array name="drawerMainActivityList">
        <item>Wallet</item>
        <item>Settings</item>
        <item>About App</item>
    </string-array>
    <string name="logo">Logo</string>
    <string name="signInWelcome">Welcome!</string>
    <string name="signInIp">Enter the IP Address of the machine running the Gridcoin Wallet:</string>
    <string name="signInPort">Enter the RPC Port Number:</string>
    <string name="signInUsername">Username:</string>
    <string name="signInPassword">Password:</string>
    <string name="signInRemember">Remember Information</string>
    <string name="signInSignIn">Sign In</string>
    <string name="wallet">Wallet</string>
    <string name="yourAddress">Your Address:</string>
    <string name="address">Address Unknown</string>
    <string name="balance">Balance: 0</string>
    <string name="blocks">Blocks: 0</string>
    <string name="staking">Staking: 0</string>
    <string name="por_diff">PoR Difficulty: 0</string>
    <string name="netWeight">Net Weight: 0</string>
    <string name="cpid">CPID: N/A</string>
    <string name="grcMagnitudeUnit">GRC Mag Unit: 0</string>
    <string name="myMagnitude">My Magnitude: 0</string>
    <string name="clientVersion">Client Version: 0.0.0.0</string>
    <string name="connections">Connections: 0</string>
    <string name="aboutApp">Developed by: Moisés Cardona\nVersion 1.1\n</string>
    <string name="donateGrcTo">Donate Gridcoins to:</string>
    <string name="grcAddress">SAw6dAHTe2oZQTkLGCRjakB5pyHBu8hsAy</string>
    <string name="refresh">Refresh</string>
    <string name="enter_the_rpc_port_number">Enter the RPC Port Number</string>
    <string name="enter_the_rpc_server_address_or_ip">Enter the RPC server address or IP</string>
    <string name="enter_the_rpc_username">Enter the RPC username</string>
    <string name="enter_the_rpc_password">Enter the RPC password</string>
    <string name="wallet_settings">Wallet Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="the_configuration_may_be_incorrect_or_the_connection_may_just_be_temporarily_down">The configuration may be incorrect or the connection may just be temporarily down...</string>
    <string name="check_the_connnection_to_your_wallet">Check the connnection to your wallet.</string>
    <string name="connection_error">Connection Error</string>
</resources>
