<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:orientation="vertical">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/userlogin_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/welcomeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/signInWelcome"
                        android:textSize="36sp" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_below="@+id/welcomeText"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/logo"
                        app:srcCompat="@mipmap/gridcoin_logo" />

                    <TextView
                        android:id="@+id/HowToEnableRPC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:layout_alignEnd="@+id/IPAddressText"
                        android:text="@string/howToEnableRpc"
                        android:textColor="#0000FF" />

                    <TextView
                        android:id="@+id/AddressTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/HowToEnableRPC"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/signInIp" />

                    <EditText
                        android:id="@+id/IPAddressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/AddressTextView"
                        android:layout_alignStart="@+id/AddressTextView"
                        android:layout_alignEnd="@+id/AddressTextView"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/enter_the_rpc_server_address_or_ip"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/PortTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/IPAddressText"
                        android:layout_alignStart="@+id/IPAddressText"
                        android:text="@string/signInPort" />

                    <EditText
                        android:id="@+id/PortEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/PortTextView"
                        android:layout_alignStart="@+id/PortTextView"
                        android:layout_alignEnd="@+id/IPAddressText"
                        android:ems="10"
                        android:hint="@string/enter_the_rpc_port_number"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/PortEditText"
                        android:layout_alignStart="@+id/PortEditText"
                        android:text="@string/signInUsername" />

                    <EditText
                        android:id="@+id/UsernameField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView13"
                        android:layout_alignStart="@+id/textView13"
                        android:layout_alignEnd="@+id/PortEditText"
                        android:hint="@string/enter_the_rpc_username"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/PasswordTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/UsernameField"
                        android:layout_alignStart="@+id/UsernameField"
                        android:text="@string/signInPassword" />

                    <EditText
                        android:id="@+id/PasswordTextBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/PasswordTextView"
                        android:layout_alignStart="@+id/PasswordTextView"
                        android:layout_alignEnd="@+id/UsernameField"
                        android:hint="@string/enter_the_rpc_password"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:importantForAutofill="no" />

                    <CheckBox
                        android:id="@+id/RememberCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/PasswordTextBox"
                        android:layout_alignStart="@+id/PasswordTextBox"
                        android:text="@string/signInRemember" />

                    <Button
                        android:id="@+id/SaveSignInButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RememberCheckBox"
                        android:layout_alignStart="@+id/RememberCheckBox"
                        android:layout_alignEnd="@+id/IPAddressText"
                        android:text="@string/signInSignIn" />
                </RelativeLayout>
            </ScrollView>

        </RelativeLayout>

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#111"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:focusable="true" />
    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>