<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/check_connection_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewConnectionError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/connection_error"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <ImageView
                        android:id="@+id/imageViewConnectionError"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_below="@+id/textViewConnectionError"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/logo"
                        app:srcCompat="@mipmap/gridcoin_comms_logo" />

                    <TextView
                        android:id="@+id/textViewConnectionCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageViewConnectionError"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/check_the_connnection_to_your_wallet" />

                    <TextView
                        android:id="@+id/textViewConnectionCorrection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewConnectionCheck"
                        android:textAlignment="center"
                        android:text="@string/the_configuration_may_be_incorrect_or_the_connection_may_just_be_temporarily_down" />
                </RelativeLayout>
            </ScrollView>

        </RelativeLayout>

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#111"
            android:clickable="true"
            android:focusable="true"
            />
    </androidx.drawerlayout.widget.DrawerLayout>


</RelativeLayout>